# qt-minimal

./: CMakeLists.txt  QtMinimal.pro  README.md  minimal.pro
include/: mainwindow.h
src/: main.cpp  mainwindow.cpp
ui/: mainwindow.ui
